--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Y7Maker YouTube Downloader - Hookrest API</title>
-  <link id="icon" rel="icon" href="https://qu.ax/rGkeW.jpg" type="image/png">
+  <link id="icon" rel="icon" href="https://image.pollinations.ai/prompt/Buat%20gambar%20youtube%20download%20yaitu%20Y7%20dengan%20desain%203d%2C%20warna%20putih%20merah%20domainan%20merah%20seperti%20logo%20play%20tapi%20lebih%20rapih?seed=1756394813856290123&enhance=true&nologo=true&model=flux" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap');
