--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@
       const proxyUrl = 'https://api.allorigins.win/raw?url=';
       let apiUrl;
       if (type === "mp3") {
-        apiUrl = `https://hookrest.my.id/dowload/ytmp3?url=${encodeURIComponent(url)}&apikey=hookrest`;
+        apiUrl = `https://hookrest.my.id/dowload/ytmp3?url=${encodeURIComponent(url)}`;
       } else {
-        apiUrl = `https://hookrest.my.id/dowload/ytmp4?url=${encodeURIComponent(url)}&apikey=hookrest`;
+        apiUrl = `https://hookrest.my.id/dowload/ytmp4?url=${encodeURIComponent(url)}`;
       }
 
       try {
